-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8167124 | 8u152 | David Hill | P3 | Resolved | Fixed | b01 |
| JDK-8171872 | 8u131 | David Hill | P3 | Resolved | Fixed | b01 |
The javac tool now provides the ability to generate native headers as needed. This removes the need to run the javah tool as a separate step in the build pipeline. The feature is enabled in javac by using the new -h option, which is used to specify a directory in which the header files should be written. Header files will be generated for any class which has either native methods, or constant fields annotated with a new annotation of type java.lang.annotation.Native.
This should ease the transition to a modular build by allowing us to remove one extra javah step.
This should ease the transition to a modular build by allowing us to remove one extra javah step.
- backported by
-
JDK-8167124 use @Native annotation in web classes
-
- Resolved
-
-
JDK-8171872 use @Native annotation in web classes
-
- Resolved
-