8166231: use @Native annotation in web classes

Reviewed-by: kcr