modules/javafx.web/src/main/java/com/sun/webkit/graphics/WCPath.java
@@ -25,6 +25,8 @@
 
 package com.sun.webkit.graphics;
 
+import java.lang.annotation.Native;
+
 public abstract class WCPath<P> extends Ref {
 
     /* The WindRule should be compliant with
@@ -40,7 +42,7 @@ public abstract class WCPath<P> extends Ref {
      * of times in the counter-clockwise direction than the
      * clockwise direction.
      */
-    public static final int RULE_NONZERO = 0;
+    @Native public static final int RULE_NONZERO = 0;
 
     /**
      * The winding rule constant for specifying an even-odd rule
@@ -49,7 +51,7 @@ public abstract class WCPath<P> extends Ref {
      * path if a ray drawn in any direction from that point to
      * infinity is crossed by path segments an odd number of times.
      */
-    public static final int RULE_EVENODD = 1;
+    @Native public static final int RULE_EVENODD = 1;
 
     public abstract void addRect(double x, double y, double w, double h);
 
