modules/javafx.web/src/main/java/com/sun/webkit/text/TextNormalizer.java
@@ -25,15 +25,16 @@
 
 package com.sun.webkit.text;
 
+import java.lang.annotation.Native;
 import java.text.Normalizer;
 
 final class TextNormalizer {
 
     // Text normalization forms
-    private static final int FORM_NFC = 0;
-    private static final int FORM_NFD = 1;
-    private static final int FORM_NFKC = 2;
-    private static final int FORM_NFKD = 3;
+    @Native private static final int FORM_NFC = 0;
+    @Native private static final int FORM_NFD = 1;
+    @Native private static final int FORM_NFKC = 2;
+    @Native private static final int FORM_NFKD = 3;
 
     private static String normalize(String data, int type) {
         Normalizer.Form form;
